--- a/HopIn/src/app/driver-documents/driver-documents.component.html
+++ b/HopIn/src/app/driver-documents/driver-documents.component.html
@@ -1,20 +1,17 @@
 <div id="add-document-container" class="document-container">
-    <mat-icon>add_circle_outline</mat-icon>
+    <mat-icon (click)="openAddDocumentPopUp()">add_circle_outline</mat-icon>
     <span>add new document</span>
 </div>
-<form fxLayout="column">
-    <div *ngFor="let document of documents; let i = index;"  class="document-container">
-        <mat-icon>document_scanner</mat-icon>
-        <span (click)="openShowDetailsPopUp(i)">{{ document.name }}</span>
-        <div class="document-btns-container">
-            <button id="update-img-btn" type="button" (click)="openUpdateDocumentPopUp(i)">
-                <i class="fas fa-pencil-alt"></i>
-                <!-- <input #fileInput type="file" style="display: none" (change)="onFileSelect($event, i)"> -->
-            </button>
-            <button id="delete-document-btn" type="button">
-                <mat-icon>delete</mat-icon>
-            </button>
-        </div>
+<div *ngFor="let document of documents; let i = index;"  class="document-container">
+    <mat-icon>document_scanner</mat-icon>
+    <span (click)="openShowDetailsPopUp(i)">{{ document.name }}</span>
+    <div class="document-btns-container">
+        <button id="update-img-btn" type="button" (click)="openUpdateDocumentPopUp(i)">
+            <i class="fas fa-pencil-alt"></i>
+            <!-- <input #fileInput type="file" style="display: none" (change)="onFileSelect($event, i)"> -->
+        </button>
+        <button id="delete-document-btn" type="button">
+            <mat-icon>delete</mat-icon>
+        </button>
     </div>
-    <button class="conf-button" mat-raised-button type="submit">Save</button>
-</form>
+</div>
