--- a/HopIn/src/app/user-graph/user-graph.component.html
+++ b/HopIn/src/app/user-graph/user-graph.component.html
@@ -7,6 +7,11 @@
         <h3>Tell us about the report:</h3>
         <div class="line"></div>
 
+        <div class="row" *ngIf="_role === 'admin'">
+            <p>Input ID:</p>
+            <input placeholder="Id" type="number">
+        </div>
+
         <div class="row">
             <p>Choose the criteria:</p>
             <div class="dropdown">
