--- a/HopIn/src/app/report-options/report-options.component.css
+++ b/HopIn/src/app/report-options/report-options.component.css
@@ -1,8 +1,9 @@
 #passenger-account-options-container{
     display: inline-block;
-    height: 100%;
+    height: 750px;
     border-right: 2px solid #B1B1B1;
     padding: 0px 15px;
+    /* margin-right: 10px; */
 }
 
 .account-options {
@@ -24,6 +25,7 @@
         grid-row: 1fr;        
         width: 100%;
         height: fit-content;
+        margin-top: 3vh;
         border-right: 0;
         border-bottom: 1px solid #B1B1B1;
         padding: 0;
@@ -34,8 +36,4 @@
         display: inline-block;
         padding: 10px;
     }  
-
-    .responsive-span {
-        display: none;
-    }
 }
