added user service in user-graph component for getting current user's role, and added design changes depending on role

--- a/HopIn/src/app/user-graph/user-graph.component.css
+++ b/HopIn/src/app/user-graph/user-graph.component.css
@@ -1,4 +1,4 @@
-.userGraphContainer {
+.containerDesignPassenger {
     align-self: center;
     display: flex;
     flex-direction: row;
@@ -6,13 +6,23 @@
     margin-bottom: 30vh;
 }
 
-.containerDesign {
+.containerDesignDriver {
   flex-direction: column !important;
   display: flex;
   margin-left: 30px !important;
   margin-top: 4vh;
   margin-bottom: 10vh;
 }
+
+.containerDesignAdmin {
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+  margin-bottom: 30vh;
+  align-items: center;
+}
+
 
 #reportInfoContainer {
     display: flex;
