--- a/HopIn/src/app/user-graph/user-graph.component.css
+++ b/HopIn/src/app/user-graph/user-graph.component.css
@@ -268,7 +268,7 @@ canvas {
 
 
 @media only screen and (max-width: 900px) {
-  .containerDesign {
+  .containerDesignDriver {
     margin: 0;
     margin-top: 4vh;
     margin-left: 0 !important;
