added design for document add/update

--- a/HopIn/src/app/admin-request-details/admin-request-details.component.css
+++ b/HopIn/src/app/admin-request-details/admin-request-details.component.css
@@ -29,6 +29,11 @@
     color: #B1B1B1;
 }
 
+#admin-request-vehicle {
+    margin-top: 20px;
+    text-align: center;
+}
+
 mat-checkbox {
     display: block;
     font-size: 0.85em !important;
