--- a/HopIn/src/app/admin-request-details-container/admin-request-details-container.component.html
+++ b/HopIn/src/app/admin-request-details-container/admin-request-details-container.component.html
@@ -1,3 +1,6 @@
 <div class="request-details-container border">
     <app-update-request-details></app-update-request-details>
+    <button class="decline-request-button back-red white" mat-raised-button>Decline</button>
+    <button class="accept-request-button back-green white" mat-raised-button>Accept</button>
+
 </div>
