--- a/HopIn/src/app/request-feedback/request-feedback.component.html
+++ b/HopIn/src/app/request-feedback/request-feedback.component.html
@@ -26,4 +26,16 @@
             <button >Declined</button>
         </div>
     </div>
+    <div class="acceptedContianer">
+        <div class="row firstRow">
+            <img src="../../assets/vectors/profileAvatar.svg" alt="">
+            <p id="name">Mark Jacobs </p>
+            <p id="acceptedP">&nbsp;accepted&nbsp;</p>
+            <p>your request</p>
+        </div>
+        <div class="right">
+            <p id="date">at 13:00, 20.11.2022.</p>
+            <button class="greenBackground">Accepted</button>
+        </div>
+    </div>
 </div>
