--- a/HopIn/src/app/decline-request-reason-dialog/decline-request-reason-dialog.component.html
+++ b/HopIn/src/app/decline-request-reason-dialog/decline-request-reason-dialog.component.html
@@ -1,4 +1,4 @@
-<div style="width: 300px">
+<div id="decline-request-container">
     <h1 mat-dialog-title class="red" align="center">Decline reason</h1>
     <div id="text-area-container" mat-dialog-content align="center">
     <mat-form-field class="example-full-width">
