--- a/HopIn/src/app/admin-request-details-container/admin-request-details-container.component.css
+++ b/HopIn/src/app/admin-request-details-container/admin-request-details-container.component.css
@@ -10,6 +10,25 @@
     background-color: white;
 }
 
+@media screen and (max-width: 1200px){
+    .request-details-container{
+        height: 600px;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .request-details-container {
+        display: block;
+    }
+}
+
+@media screen and (max-width: 875px) {
+    .request-details-container {
+        width: 60%;
+    }
+}
+
+
 .decline-request-button {
     position: absolute;
     left: 0;
