--- a/HopIn/src/app/update-request-details/update-request-details.component.html
+++ b/HopIn/src/app/update-request-details/update-request-details.component.html
@@ -1,8 +1,8 @@
 <div>
 <div id="admin-request-title" class="back-light-blue">
-    Account information update
+    <span>Account information update</span>
 </div>
-<div id="admin-request-personal-info">
+<div id="admin-request-personal-info" style="display:none">
     <div class="account-settings-form-container">
         <form [formGroup]="personalInfoForm" fxLayout="column">
             <div style="width: 100%">
@@ -39,7 +39,7 @@
     <span>Password has been changed.</span>
 </div>
 
-<div id="admin-request-vehicle" style="display: none;">
+<div id="admin-request-vehicle" style="display: none">
     <div class="account-settings-form-container">
         <form [formGroup]="vehicleInfoForm" fxLayout="column">
             <mat-form-field [hideRequiredMarker]="true" id="model">
@@ -72,7 +72,7 @@
         </div>
     </div>
 </div>
-<div id="admin-request-vehicle" style="display: none">
+<div id="admin-request-vehicle" >
     <span>Document has been added/updated.</span>
     <div class="document-container">
         <mat-icon>document_scanner</mat-icon>
