added update request details in dashboard and adjusted design

--- a/HopIn/src/app/driver-request-dashboard/driver-request-dashboard.component.html
+++ b/HopIn/src/app/driver-request-dashboard/driver-request-dashboard.component.html
@@ -1,1 +1,11 @@
-<app-request-feedback></app-request-feedback>
+<div class="mainContainer">
+    <div class="left">
+
+    </div>
+    <div class="right">
+        <div id="updateDetails">
+            <app-update-request-details></app-update-request-details>
+        </div>
+        <app-request-feedback></app-request-feedback>
+    </div>
+</div>
