added attribute status in request feedback component, for displaying different container depending on request status

--- a/HopIn/src/app/request-feedback/request-feedback.component.html
+++ b/HopIn/src/app/request-feedback/request-feedback.component.html
@@ -1,8 +1,8 @@
 <div class="allFeedBackOptionsContianer">
-    <div class="pendingContainar">
+    <div class="pendingContainar" *ngIf="status === 'pending'">
         <p>Waiting admin feedback...</p>
     </div>
-    <div class="declinedContianer">
+    <div class="declinedContianer" *ngIf="status === 'declined'">
         <div class="left">
             <div class="row firstRow">
                 <img src="../../assets/vectors/profileAvatar.svg" alt="">
@@ -26,7 +26,7 @@
             <button >Declined</button>
         </div>
     </div>
-    <div class="acceptedContianer">
+    <div class="acceptedContianer" *ngIf="status === 'accepted'">
         <div class="row firstRow">
             <img src="../../assets/vectors/profileAvatar.svg" alt="">
             <p id="name">Mark Jacobs </p>
