--- a/HopIn/src/app/account-details/account-details.component.html
+++ b/HopIn/src/app/account-details/account-details.component.html
@@ -74,7 +74,7 @@
         </div>
     </div>
 
-    <button [routerLink]="['/account-settings']">Account settings</button>
+    <button [routerLink]="['/account-settings']"><img id="settingsIcon" src="../../assets/vectors/settingsIcon.svg"><p>Account settings</p></button>
 
 
 
