--- a/HopIn/src/app/admin-account/admin-account.component.css
+++ b/HopIn/src/app/admin-account/admin-account.component.css
@@ -1,10 +1,8 @@
 .win {
-    width: 100vw;
-    align-items: center;
-    display: grid;
+    display: flex;
 }
 
 account-details {
-    align-self: center;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
