--- a/HopIn/src/app/update-request-details/update-request-details.component.css
+++ b/HopIn/src/app/update-request-details/update-request-details.component.css
@@ -34,6 +34,11 @@
     text-align: center;
 }
 
+#admin-request-document {
+    margin-top: 20px;
+    text-align: center;
+}
+
 mat-checkbox {
     display: block;
     font-size: 0.85em !important;
