--- a/HopIn/src/app/update-request-details/update-request-details.component.html
+++ b/HopIn/src/app/update-request-details/update-request-details.component.html
@@ -2,7 +2,7 @@
 <div id="admin-request-title" class="back-light-blue">
     Account information update
 </div>
-<div id="admin-request-personal-info">
+<div id="admin-request-personal-info" *ngIf="this.type === 'info'">
     <div class="account-settings-form-container">
         <form [formGroup]="personalInfoForm" fxLayout="column">
             <div style="width: 100%">
@@ -35,7 +35,7 @@
         </form>
     </div>
 </div>
-<div id="admin-request-password" style="display: none;">
+<div id="admin-request-password" *ngIf="this.type === 'password'">
     <span>Password has been changed.</span>
 </div>
 
@@ -72,8 +72,8 @@
         </div>
     </div>
 </div>
-<div id="admin-request-vehicle" style="display: none">
-    <span>Document has been added/updated.</span>
+<div id="admin-request-document" *ngIf="this.type === 'document'">
+    <span>Document has been </span><span *ngIf="documentOperation === 'ADD'">added.</span><span *ngIf="documentOperation === 'UPDATE'">updated.</span>
     <div class="document-container">
         <mat-icon>document_scanner</mat-icon>
         <span (click)="openShowDetailsPopUp()">name</span>
