added x-axis labels on chart in user graph component

--- a/HopIn/src/app/user-graph/user-graph.component.css
+++ b/HopIn/src/app/user-graph/user-graph.component.css
@@ -309,6 +309,8 @@ canvas {
 
   .reportContainerPassenger {
     width: 70vw;
+    margin-left: 0;
+    margin-top: 4vh;
   }
 
   .reportContainerDriver {
