--- a/HopIn/src/app/update-request-details/update-request-details.component.css
+++ b/HopIn/src/app/update-request-details/update-request-details.component.css
@@ -29,6 +29,10 @@
     color: #B1B1B1;
 }
 
+.request-vehicle-type span{
+    display: block;
+}
+
 #admin-request-vehicle {
     margin-top: 20px;
     text-align: center;
