added dynamically loading date of request in request-feedback component

--- a/HopIn/src/app/request-feedback/request-feedback.component.html
+++ b/HopIn/src/app/request-feedback/request-feedback.component.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="right">
-            <p id="date">at 13:00, 20.11.2022.</p>
+            <p id="date">{{this.date}}</p>
             <button >Declined</button>
         </div>
     </div>
@@ -28,7 +28,7 @@
             <p>your request</p>
         </div>
         <div class="right">
-            <p id="date">at 13:00, 20.11.2022.</p>
+            <p id="date">{{this.date}}</p>
             <button class="greenBackground">Accepted</button>
         </div>
     </div>
