--- a/HopIn/src/app/update-requests-display/update-requests-display.component.html
+++ b/HopIn/src/app/update-requests-display/update-requests-display.component.html
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div id="request-cards">
-        <div class="request-card" *ngFor="let request of requests">
+        <div class="request-card" *ngFor="let request of requests" [ngClass]="selectedRequestId == request.id?'selected-request-card': ''" (click)="selectRequest(request)">
             <img [src]="request.driver.profilePicture" class="driver-photo">
             <div class="driver-info">
                 <p class="driver-name dark-blue">{{ request.driver.name + " " + request.driver.surname }}</p>
@@ -21,10 +21,10 @@
                 </div>    
             </div> 
             <p class="request-time dark-gray">
-                {{ request.time }}
+                {{ formatDate(request.time) }}
             </p>
-            <p class="request-type-tag" ngClass="request.type + '-bcg'">
-                {{ request.type }}
+            <p class="request-type-tag" [ngClass]="request.type.toLowerCase() + '-bcg'">
+                {{ request.type.toLowerCase() }}
             </p>            
         </div>
     </div>
