--- a/HopIn/src/app/update-requests-display/update-requests-display.component.html
+++ b/HopIn/src/app/update-requests-display/update-requests-display.component.html
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div id="request-cards">
-        <div class="request-card" *ngFor="let request of requests" [ngClass]="selectedRequestId == request.id?'selected-request-card': ''" (click)="selectRequest(request)">
+        <div class="request-card" *ngFor="let request of requests" [ngClass]="{'selected-request-card': selectedRequestId == request.id, 'accepted-request': request.status == 'ACCEPTED', 'denied-request': request.status == 'DENIED'}" (click)="selectRequest(request)">
             <img [src]="request.driver.profilePicture" class="driver-photo">
             <div class="driver-info">
                 <p class="driver-name dark-blue">{{ request.driver.name + " " + request.driver.surname }}</p>
