--- a/HopIn/src/app/app.component.html
+++ b/HopIn/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div style="height: 100%;">
   <toolbar></toolbar>
   <div id="content">
-    <!-- <router-outlet></router-outlet> -->
-    <update-requests-display></update-requests-display>
+    <router-outlet></router-outlet>
   </div>
 </div>
