--- a/HopIn/src/app/driver-request-dashboard/driver-request-dashboard.component.css
+++ b/HopIn/src/app/driver-request-dashboard/driver-request-dashboard.component.css
@@ -6,10 +6,15 @@
 }
 
 .left {
-    width: 35vw;
-    border: 1px solid black;
-    height: 50vh;
+    width: fit-content;
     margin-left: auto;
+}
+
+.left-alone {
+    margin-right: auto !important;
+}
+
+.left-not-alone {
     margin-right: 15px;
 }
 
@@ -17,7 +22,8 @@
     display: flex;
     flex-direction: column;
     margin-right: auto;
-    margin-left: 15px
+    margin-left: 15px;
+    margin-top: 20px;
 }
 
 #updateDetails {
@@ -27,4 +33,6 @@
     border: 2px solid #D9D9D9;
     padding: 15px;
     padding-bottom: 40px;
+    border-radius: 10px;
+    height: fit-content;
 }
