--- a/HopIn/src/app/request-feedback/request-feedback.component.css
+++ b/HopIn/src/app/request-feedback/request-feedback.component.css
@@ -15,6 +15,7 @@
     background: white;
     border: 2px solid #D9D9D9;
     padding: 15px;
+    border-radius: 10px;
 }
 
 p {
@@ -34,6 +35,7 @@ p {
     padding: 15px;
     align-self: center;
     align-content: center;
+    border-radius: 10px;
 }
 
 
@@ -144,6 +146,7 @@ img {
     padding: 15px;
     align-self: center;
     align-content: center;
+    border-radius: 10px;
 }
 
 .greenBackground {
