--- a/HopIn/src/app/update-request-details/update-request-details.component.html
+++ b/HopIn/src/app/update-request-details/update-request-details.component.html
@@ -2,7 +2,7 @@
 <div id="admin-request-title" class="back-light-blue">
     <span>Account information update</span>
 </div>
-<div id="admin-request-personal-info" *ngIf="this.type === 'info'">
+<div id="admin-request-personal-info" *ngIf="this.type === 'INFO'">
     <div class="account-settings-form-container">
         <form [formGroup]="personalInfoForm" fxLayout="column">
             <div style="width: 100%">
@@ -35,11 +35,11 @@
         </form>
     </div>
 </div>
-<div id="admin-request-password" *ngIf="this.type === 'password'">
+<div id="admin-request-password" *ngIf="this.type === 'PASSWORD'">
     <span>Password has been changed.</span>
 </div>
 
-<div id="admin-request-vehicle" *ngIf="this.type === 'vehicle'">
+<div id="admin-request-vehicle" *ngIf="this.type === 'VEHICLE'">
     <div class="account-settings-form-container">
         <form [formGroup]="vehicleInfoForm" fxLayout="column">
             <mat-form-field [hideRequiredMarker]="true" id="model">
@@ -72,7 +72,7 @@
         </div>
     </div>
 </div>
-<div id="admin-request-document" *ngIf="this.type === 'document'">
+<div id="admin-request-document" *ngIf="this.type === 'DOCUMENT'">
     <span>Document has been </span><span *ngIf="documentOperation === 'ADD'">added.</span><span *ngIf="documentOperation === 'UPDATE'">updated.</span>
     <div class="document-container">
         <mat-icon>document_scanner</mat-icon>
