polished up styles and added code enabling to reuse dashboard for both driver and admin

--- a/HopIn/src/app/app.component.html
+++ b/HopIn/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div style="height: 100%;">
   <toolbar></toolbar>
   <div id="content">
-    <router-outlet></router-outlet>
+    <!-- <router-outlet></router-outlet> -->
+    <driver-request-dashboard></driver-request-dashboard>
   </div>
 </div>
