--- a/HopIn/src/app/update-request-details/update-request-details.component.css
+++ b/HopIn/src/app/update-request-details/update-request-details.component.css
@@ -1,6 +1,6 @@
 #admin-request-title {
     margin: 20px auto;
-    width: 65%;
+    width: 75% !important;
     border-radius: 5px;
     padding: 3px 10px;
     color: white;
