--- a/HopIn/src/app/driver-request-dashboard/driver-request-dashboard.component.html
+++ b/HopIn/src/app/driver-request-dashboard/driver-request-dashboard.component.html
@@ -1,8 +1,8 @@
 <div class="mainContainer">
-    <div class="left" [ngClass]="this.areDetailsDisplayed === true ? 'left-not-alone': 'left-alone'">
+    <div class="left left-not-alone" >
         <update-requests-display></update-requests-display>
     </div>
-    <div class="right" *ngIf="this.areDetailsDisplayed === true">
+    <div class="right">
         <div id="updateDetails">
             <app-update-request-details></app-update-request-details>
         </div>
