--- a/HopIn/src/app/update-request-details/update-request-details.component.html
+++ b/HopIn/src/app/update-request-details/update-request-details.component.html
@@ -1,4 +1,5 @@
-<div>
+<p *ngIf="this.isRequestSelected === false" id="emptyTitle">Time to go through some requests...</p>
+<div *ngIf="this.isRequestSelected === true">
 <div id="admin-request-title" [ngClass]="type.toLowerCase() + '-bcg'">
     <span>{{ type.charAt(0).toUpperCase() + type.slice(1).toLowerCase() }} information update</span>
 </div>
