--- a/HopIn/src/app/driver-request-dashboard/driver-request-dashboard.component.html
+++ b/HopIn/src/app/driver-request-dashboard/driver-request-dashboard.component.html
@@ -5,6 +5,7 @@
     <div class="right">
         <div id="updateDetails">
             <app-update-request-details></app-update-request-details>
+            <!-- <app-admin-request-details-container></app-admin-request-details-container> -->
         </div>
         <app-request-feedback></app-request-feedback>
     </div>
