--- a/HopIn/src/app/driver-request-dashboard/driver-request-dashboard.component.html
+++ b/HopIn/src/app/driver-request-dashboard/driver-request-dashboard.component.html
@@ -4,8 +4,8 @@
     </div>
     <div class="right">
         <div id="updateDetails">
-            <app-update-request-details></app-update-request-details>
-            <!-- <app-admin-request-details-container></app-admin-request-details-container> -->
+            <app-update-request-details *ngIf="this._role == 'driver'"></app-update-request-details>
+            <app-admin-request-details-container *ngIf="this._role == 'admin'"></app-admin-request-details-container>
         </div>
         <app-request-feedback></app-request-feedback>
     </div>
