sent data to back when driver updates profile and shown response

--- a/HopIn/src/app/document-add-dialog/document-add-dialog.component.html
+++ b/HopIn/src/app/document-add-dialog/document-add-dialog.component.html
@@ -15,7 +15,7 @@
     </button>
   </div>
   <div *ngIf="selected" mat-dialog-content align="center">
-      <img [src]="data.url" class="dialog-document-img">
+      <img [src]="url" class="dialog-document-img">
   </div>
   <div mat-dialog-actions align="center">
     <button mat-button (click)="save()" class="back-green white">Save</button>
