--- a/HopIn/src/app/change-vehicle-info/change-vehicle-info.component.css
+++ b/HopIn/src/app/change-vehicle-info/change-vehicle-info.component.css
@@ -1,5 +1,7 @@
 .account-settings-form-container {
     text-align: center;
+    position: relative;
+    height: fit-content;
 }
 
 mat-form-field{
@@ -38,6 +40,7 @@ mat-error {
     right: 50%;
     bottom: 0;
     transform: translate(50%, -50%);
+    z-index: 20;
  }
 
  .icon-button span {
