--- a/HopIn/src/app/driver-documents/driver-documents.component.html
+++ b/HopIn/src/app/driver-documents/driver-documents.component.html
@@ -10,7 +10,7 @@
             <i class="fas fa-pencil-alt"></i>
             <!-- <input #fileInput type="file" style="display: none" (change)="onFileSelect($event, i)"> -->
         </button>
-        <button id="delete-document-btn" type="button">
+        <button id="delete-document-btn" (click)="deleteDocument(i)"type="button">
             <mat-icon>delete</mat-icon>
         </button>
     </div>
