fixed design in request-details-container and added dynamically changing design depending on role, request status and request selection

--- a/HopIn/src/app/admin-request-details-container/admin-request-details-container.component.css
+++ b/HopIn/src/app/admin-request-details-container/admin-request-details-container.component.css
@@ -1,13 +1,10 @@
 .request-details-container {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    width: 26.5%;
+    width: 30.5vw;
     height: 500px;
     padding: 10px 50px;
     background-color: white;
+    display: flex;
+    flex-direction: column;
 }
 
 @media screen and (max-width: 1200px){
@@ -28,11 +25,13 @@
     }
 }
 
+div > div {
+    margin-top: auto;
+    display: flex;
+    flex-direction: row;
+}
 
 .decline-request-button {
-    position: absolute;
-    left: 0;
-    bottom: 0;
     margin-left: 35px;
     margin-bottom: 35px;
     padding: 0px 20px;
@@ -40,11 +39,9 @@
 }
 
 .accept-request-button {
-    position: absolute;
-    right: 0;
-    bottom: 0;
     margin-right: 35px;
     margin-bottom: 35px;
+    margin-left: auto;
     padding: 0px 20px;
     width: 100px;
 }
